2007-10-14  Jens Granseuer  <jensgr@gmx.net>

	When updating theme info from GConf or copying it for customization, we
	were ignoring xcursor settings. As a result, saved custom themes always
	had the default theme set. (bug #485709)

	* appearance-themes.c: (get_default_int_from_key),
	(theme_load_from_gconf), (theme_set_custom_from_theme): when setting up
	theme info, take cursor settings into account

2007-10-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_props_wp_set): fix crash if we fail to
	convert a filename to UTF-8

2007-09-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_store_sort_func): make theme sorting
	case-insensitive (bug #481224)

2007-09-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_free), (gnome_wp_item_dup):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): remove unused imguri property
	from GnomeWPItem

2007-09-23  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_drag_received), (wp_drag_get_data),
	(desktop_init): add support for dragging images from the background list
	(bug #150544)

2007-09-21  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): reword the "theme engine"
	error message since we cannot really be sure it is an engine (bug #435680)

2007-09-21  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real),
	(transfer_done_cb), (gnome_theme_install_from_uri): unify "invalid theme"
	error messages and be a bit more verbose

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): add a comment for translators (bug #473379)

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't set a fixed width for the toolbar button
	color label (bug #474317)

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* data/appearance.glade: Correct translatable property value of Save As.
	Fixes #473810.

2007-09-01  Jens Granseuer  <jensgr@gmx.net>
